test(): Ecriture des tests BDD pour la recuperation des equipements